
AC_PREREQ(2.50)

AC_INIT([openvpn-auth-http], [-], [i.muzichuk@gmail.com])

# libtool versioning

PLUGIN_MAJOR_VERSION=1
PLUGIN_MINOR_VERSION=0
PLUGIN_MICRO_VERSION=0
PLUGIN_VERSION=$PLUGIN_MAJOR_VERSION.$PLUGIN_MINOR_VERSION.$PLUGIN_MICRO_VERSION

AC_SUBST(PLUGIN_MAJOR_VERSION)
AC_SUBST(PLUGIN_MINOR_VERSION)
AC_SUBST(PLUGIN_MICRO_VERSION)
AC_SUBST(PLUGIN_VERSION)

LT_VERSION=$PLUGIN_MICRO_VERSION
LT_RELEASE=$PLUGIN_MAJOR_VERSION.$PLUGIN_MINOR_VERSION

AC_SUBST(LT_VERSION)
AC_SUBST(LT_RELEASE)

VERSION=PLUGIN_VERSION
PACKAGE=openvpn-auth-http

#

AM_INIT_AUTOMAKE

AC_CONFIG_MACRO_DIR([m4])

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Checks for programs.

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL

# Checks for libraries.

AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(curl, curl_easy_init)


AC_CONFIG_FILES([
 src/Makefile
 Makefile
])
AC_OUTPUT